This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: refleak in test_import
Type: resource usage Stage:
Components: Versions: Python 3.3
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: vstinner Nosy List: pitrou, python-dev, vstinner
Priority: normal Keywords:

Created on 2011-03-22 09:10 by pitrou, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Messages (2)
msg131727 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2011-03-22 09:10
Introduced by ef2b6305d395.
msg131734 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2011-03-22 09:47
New changeset 3114f26d5d54 by Victor Stinner in branch 'default':
Issue #11630, issue #3080: Fix refleak introduced by ef2b6305d395
http://hg.python.org/cpython/rev/3114f26d5d54
History
Date User Action Args
2022-04-11 14:57:15adminsetgithub: 55839
2011-03-22 09:47:48vstinnersetstatus: open -> closed
nosy: pitrou, vstinner, python-dev
resolution: fixed
2011-03-22 09:47:10python-devsetnosy: + python-dev
messages: + msg131734
2011-03-22 09:10:49pitroucreate