Issue #11630, issue #3080: Fix refleak introduced by ef2b6305d395